--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Non-Profit Crowdfunding App</title>
-    
+
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
@@ -19,6 +19,15 @@
     <script src="scripts/app.js"></script>
   </head>
   <body>
+    <div class="jumbotron">
+      <div class="container">
+
+        <h1>Non-Profit Crowdfunding App</h1>
+        <h2>Support a nonprofit. Make a difference. </h2>
+        <p>this is info about the website.</p>
+      </div>
+    </div>
+
 
   </body>
 </html>
