--- a/views/index.html
+++ b/views/index.html
@@ -28,6 +28,12 @@
       </div>
     </div>
 
+    <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <input type="text" class="form-control" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+    </form>
 
   </body>
 </html>
