--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,5 +35,48 @@
             <button type="submit" class="btn btn-default">Submit</button>
     </form>
 
+    <!-- page content -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+
+            <!-- new post form-->
+            <form class="form-inline" id="create-project">
+              <div class="form-group">
+                <input type="text" name="title" class="form-control" placeholder="Title" autofocus required>
+              </div>
+              <div class="form-group">
+                <input type="text" name="description" class="form-control" placeholder="Project Description" required>
+              </div>
+              <div class="form-group">
+                <input type="submit" class="btn btn-default" value="Add Project">
+              </div>
+            </form>
+            <br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </body>
 </html>
