--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
 
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/style.css">
 
     <!-- VENDOR SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
@@ -43,7 +43,7 @@
             <!-- new post form-->
             <form class="form-inline" id="create-project">
               <div class="form-group">
-                <input type="text" name="title" class="form-control" placeholder="Title" autofocus required>
+                <input type="text" name="title" class="form-control" placeholder=" Project Title" autofocus required>
               </div>
               <div class="form-group">
                 <input type="text" name="description" class="form-control" placeholder="Project Description" required>
@@ -54,8 +54,50 @@
             </form>
             <br>
 
+            <!-- list of posts -->
+            <ul class="list-group" id="projects-list">
+              <!-- handlebars template -->
+              <script id="projects-template" type="text/x-handlebars-template">
+                \{{#each projects}}
+                <li class="list-group-item post" data-id="\{{_id}}">
+                  <!-- post label (title) -->
+                  <span class="label label-default">\{{nonprofit}}</span>
+                  <!-- post description -->
+                  \{{project_description}}
 
+                  <div class="pull-right">
+                    <!-- pencil icon to toggle update form -->
+                    <a href="javascript:void(0)" data-toggle="collapse" data-target="#update-\{{_id}}">
+                      <span class="glyphicon glyphicon-pencil"></span>
+                    </a>
 
+                    <!-- trash can icon to delete post -->
+                     <a href="javascript:void(0)" class="delete-post">
+                      <span class="glyphicon glyphicon-trash"></span>
+                    </a>
+                  </div>
+
+                  <!-- form to update post -->
+                  <div class="collapse" id="update-\{{_id}}">
+                    <br>
+                    <form class="form-inline update-post">
+                      <div class="form-group">
+                        <input type="text" name="title" class="form-control" placeholder="Title" value="\{{title}}">
+                      </div>
+                      <div class="form-group">
+                        <input type="text" name="description" class="form-control" placeholder="Description" value="\{{description}}">
+                      </div>
+                      <div class="form-group">
+                        <input type="submit" class="btn btn-block btn-default" value="Update">
+                      </div>
+                    </form>
+                  </div>
+                </li>
+              \{{/each}}
+            </script>
+          </ul>
+        </div>
+      </div>
 
 
 
