--- a/views/index.hbs
+++ b/views/index.hbs
@@ -59,12 +59,31 @@
             <!-- handlebars template -->
             <script id="projects-template" type="text/x-handlebars-template">
               \{{#each projects}}
-                <li class="list-group-item post" data-id="\{{_id}}">
+              <div class="col-md-9 col-xs-12">
+                <ul class="list-group">
+                  <h4 class='inline-header'>Photo:</h4>
+                  <span class='photo'>\{{photo}}</span>
+
+                  <h4 class='inline-header'>Nonprofit:</h4>
+                  <span class='nonprofit'>\{{nonprofit}}</span>
+
+                  <h4 class='inline-header'>Money Needed:</h4>
+                  <span class='money-needed'>\{{money_needed}}</span>
+
+                  <h4 class='inline-header'>Project Description:</h4>
+                  <span class='project-description'>\{{project_description}}</span>
+
+                  <h4 class='inline-header'>Donation Description:</h4>
+                  <span class='donation-description'>\{{donation_description}}</span>
+                </ul>
+              </div>
+              \{{/each}}
+
 
 
 
             </script>
-
+          </ul>
 
 
 
