--- a/views/index.hbs
+++ b/views/index.hbs
@@ -28,13 +28,6 @@
       </div>
     </div>
 
-    <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-
     <!-- page content -->
       <div class="container">
         <div class="row">
@@ -43,10 +36,22 @@
             <!-- new post form-->
             <form class="form-inline" id="create-project">
               <div class="form-group">
-                <input type="text" name="title" class="form-control" placeholder=" Project Title" autofocus required>
+                <input type="text" name="nonprofit" class="form-control" placeholder=" Nonprofit Name" autofocus required>
               </div>
               <div class="form-group">
-                <input type="text" name="description" class="form-control" placeholder="Project Description" required>
+                <input type="text" name="money_needed" class="form-control" placeholder="Money Needed" autofocus required>
+              </div>
+              <div class="form-group">
+                <input type="text" name="project_description" class="form-control" placeholder="Project Description" required>
+              </div>
+              <div class="form-group">
+                <input type="text" name="nonprofit_description" class="form-control" placeholder="Nonprofit Description" required>
+              </div>
+              <div class="form-group">
+                <input type="text" name="photo" class="form-control" placeholder="Photo" required>
+              </div>
+              <div class="form-group">
+                <input type="text" name="donation_description" class="form-control" placeholder="Donation Description" required>
               </div>
               <div class="form-group">
                 <input type="submit" class="btn btn-default" value="Add Project">
@@ -73,6 +78,9 @@
                   <h4 class='inline-header'>Project Description:</h4>
                   <span class='project-description'>\{{project_description}}</span>
 
+                  <h4 class='inline-header'>Nonprofit Description:</h4>
+                  <span class='donation-description'>\{{nonprofit_description}}</span>
+
                   <h4 class='inline-header'>Donation Description:</h4>
                   <span class='donation-description'>\{{donation_description}}</span>
                 </ul>
@@ -84,7 +92,6 @@
 
             </script>
           </ul>
-
 
 
 
