image placeholders showing up

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -67,7 +67,7 @@
               <div class="col-md-9 col-xs-12">
                 <ul class="list-group">
                   <h4 class='inline-header'>Photo:</h4>
-                  <span class='photo'>\{{photo}}</span>
+                  <img class='img-responsive' src=\{{photo}}>
 
                   <h4 class='inline-header'>Nonprofit:</h4>
                   <span class='nonprofit'>\{{nonprofit}}</span>
