--- a/views/index.hbs
+++ b/views/index.hbs
@@ -85,8 +85,10 @@
                   <span class='donation-description'>\{{donation_description}}</span>
                 </ul>
               </div>
+              <div class='panel-footer'>
+                <button class='btn btn-primary donate'>Make a Donation</button>
+              </div>
               \{{/each}}
-
 
 
 
